--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
   <title>Golf Stats</title>
 </head>
 
-<body>
+<body style="background: #1E1E1E;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
